--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+    
+    <style type="text/css">
+        body {
+            background:url("https://picsum.photos/400/800/?random");
+    color:white;
+        }
+    </style>
 
     <head>
        <title>My Blog</title>
