--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <iframe src="https://linktr.ee/elnickopangestu"></iframe>
+    <iframe src="http://linktr.ee/elnickopangestu"></iframe>
   </body>
 </html>
