--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <iframe src="http://linktr.ee/elnickopangestu"></iframe>
-  </body>
+        <head>
+                <title> Wedding Invitation </title>
+        </head>
+    <body> 
+       <h1> sekolah koding </h1>
+            <p1>jhhkhkhkkdalkhjkashjhjhkhkh</p1>
+            <h2> sekolah koding </h2>
+            <p1> ajbkjbkjfbkjbkbkfdabkjb,knfak </p1>
+
+<a href="https://indodax.com/dashboard"> <img src="coral.png" alt="Error" height="100" weight="100"> </a>
+
+
+
+
+<a href="https://twitter.com/" target="_blank"><img src="twitterlogo.png" alt="Error" height="50" weight="50"></a>
+
+
+<img src="coral.png" alt="Error" height="100" weight="100">
+
+
+    </body>
+
+
+
 </html>
