--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 
-<a href="https://twitter.com/" target="_blank"><img src="twitterlogo.png" alt="Error" height="50" weight="50"></a>
+<a href="https://twitter.com/" target="_blank"><img src="elnickopangestu.github.io/twitterlogo.png" alt="Error" height="50" weight="50"></a>
 
 
 <img src="coral.png" alt="Error" height="100" weight="100">
