--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
             <h2> sekolah koding </h2>
             <p1> ajbkjbkjfbkjbkbkfdabkjb,knfak </p1>
 
-<a href="https://indodax.com/dashboard"> <img src="coral.png" alt="Error" height="100" weight="100"> </a>
+<a href="https://indodax.com/dashboard"> <img src="elnickopangestu.github.io/photo_2019-01-19_04-40-23.jpg" alt="Error" height="100" weight="100"> </a>
 
 
 
