--- a/home.html
+++ b/home.html
@@ -9,15 +9,17 @@
             <h2> sekolah koding </h2>
             <p1> ajbkjbkjfbkjbkbkfdabkjb,knfak </p1>
 
-<a href="https://indodax.com/dashboard"> <img src="elnickopangestu.github.io/twitterlogo.png" alt="Error" height="100" weight="100"> </a>
+<a href="https://indodax.com/dashboard"> <img src="elnickopangestu.github.io/twitterlogo.png" alt="Error" height="100" width="100"> </a>
 
 
 
 
-<a href="https://twitter.com/" target="_blank"><img src="elnickopangestu.github.io/twitterlogo.png" alt="Error" height="50" weight="50"></a>
+<a href="https://twitter.com/" target="_blank"><img src="elnickopangestu.github.io/twitterlogo.png" alt="Error" height="50" width="50"></a>
 
 
 <img src="coral.png" alt="Error" height="100" weight="100">
+            
+            <iframe src="https://maps.app.goo.gl/nYhg1SfdjycBQjo96" height="500" widht="500"></iframe>
 
 
     </body>
