--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 
 
 
-<a href="https://twitter.com/" target="_blank"><img src="elnickopangestu.github.io/twitterlogo.png" alt="Error" height="50" width="50"></a>
+<a href="https://maps.app.goo.gl/nYhg1SfdjycBQjo96" target="_blank"><img src="elnickopangestu.github.io/twitterlogo.png" alt="Error" height="50" width="50"></a>
 
 
 <img src="coral.png" alt="Error" height="100" weight="100">
