--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
 <link  rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link  rel="stylesheet" href="tester.css">
+<link  rel="stylesheet" href="elnickopangestu.github.io/style.css">
 
 
 
@@ -64,7 +64,7 @@
     <div style="width:100%; height:43px;"></div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-          <img src="wedding11.jpg" width="100%" height="100%">
+          <img src="elnickopangestu.github.io/wedding11.jpg" width="100%" height="100%">
      
         <div class="container">
           <div class="carousel-caption">
@@ -75,7 +75,7 @@
         </div>
       </div>
       <div class="carousel-item">
-          <img src="wedding12.jpg" width="100%" height="100%">
+          <img src="elnickopangestu.github.io/wedding12.jpg" width="100%" height="100%">
         <div class="container">
           <div class="carousel-caption">
             <h1><b>Crezcamos juntos</b></h1>
@@ -85,7 +85,7 @@
         </div>
       </div>
       <div class="carousel-item">
-         <img src="wedding13.jpg" width="100%" height="100%">
+         <img src="elnickopangestu.github.io/wedding13.jpg" width="100%" height="100%">
         <div class="container">
         <div style="width:100%; height:45px;" ></div>
           <div class="carousel-caption ">
