--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
 <link  rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link  rel="stylesheet" href="elnickopangestu.github.io/style.css">
+<link  rel="stylesheet" href="https://elnickopangestu.github.io/style.css">
 
 
 
