--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
      <!---header--->
      <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-danger">
-    <a class="navbar-brand" href="#">HOME</a>
+    <a class="navbar-brand" href="#">UNDANGAN HITS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
