--- a/home.html
+++ b/home.html
@@ -191,7 +191,7 @@
     <!-- /END THE FEATURETTES -->
   
   <footer class="blog-footer text-center">
-  <p> By <a href="https://lprestudios1.000webhostapp.com"> elnickopangestu</a> with &#128151;</p>
+  <p> By <a href="https://instagram.com/elnickopangestu"> elnickopangestu</a> with &#128151;</p>
   <p>
     <a href="#"></a>
   </p>
