--- a/home.html
+++ b/home.html
@@ -17,6 +17,9 @@
   </head>
   <body>
     
+    <div id="music"><embed src="#" autostart=true loop=false></div>
+
+    
     <script src="/__/firebase/8.1.2/firebase-app.js"></script>
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
