--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     
-    <div id="music"><embed src="#" autostart=true loop=false></div>
+    <div id="music"><embed src="weddingsong01.mp3" autostart=true loop=false></div>
 
     
     <script src="/__/firebase/8.1.2/firebase-app.js"></script>
