--- a/home.html
+++ b/home.html
@@ -17,8 +17,9 @@
   </head>
   <body>
     
-    <div id="music"><embed src="weddingsong01.mp3" autostart=true loop=false></div>
-
+    <audio controls autoplay loop hidden>
+    <source src="weddingsong01.mp3" type="audio/mpeg">
+</audio>
     
     <script src="/__/firebase/8.1.2/firebase-app.js"></script>
     <!-- TODO: Add SDKs for Firebase products that you want to use
