--- a/home.html
+++ b/home.html
@@ -17,9 +17,11 @@
   </head>
   <body>
     
-    <audio controls autoplay loop hidden>
-    <source src="weddingsong01.mp3" type="audio/mpeg">
-</audio>
+    <div style="visibility:hidden">
+    <audio autoplay loop>
+        <source src="weddingsong01.mp3">
+    </audio> 
+</div>
     
     <script src="/__/firebase/8.1.2/firebase-app.js"></script>
     <!-- TODO: Add SDKs for Firebase products that you want to use
