--- a/home.html
+++ b/home.html
@@ -17,9 +17,7 @@
   </head>
   <body>
     
-    <audio autoplay loop>
-      <source src="weddingsong01.mp3">
-</audio>
+   <audio src="weddingsong01.mp3" style="display:none;" autoplay>
     
     <script src="/__/firebase/8.1.2/firebase-app.js"></script>
     <!-- TODO: Add SDKs for Firebase products that you want to use
