--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
 			</div>
 		</div>
 	</header>
-
+<video width="100%" height="auto" controls autoplay>
+		<source src="vidio02.mp4" type="video/mp4">
+		</video>
 	<div id="fh5co-couple">
 		<div class="container">
 			<div class="row">
@@ -145,25 +147,7 @@
 		</div>
 	</div>
 
-	<div class="music-box">
-        <button class="music-box-toggle-btn">
-            <!--
-                <i class="fa fa-music"></i> -->
-            <audio id='song' loop>
-                <source src="janjisucisong.mp3">
-            </audio>
-
-            <button type="button" class="music" id="unmute2-sound" Style="display:inline-block;">
-                <img border="0" alt="" src="images/iconsound01.png"
-                    width="20" height="20">
-            </button>
-            <button type="button" class="music" id="mute-sound" style="display:none">
-                <img border="0" alt="" src="images/iconsound02.png"
-                    width="20" height="20">
-            </button>
-            
-        </button>
-	</div>
+	
 	
 
 
