--- a/index.html
+++ b/index.html
@@ -315,11 +315,11 @@
 
 	
 
-	<div id="fh5co-testimonial">
+	<div idfh5co-testimonial">
 		<div class="container">
 			<div class="row">
 				<div class="row animate-box">
-					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<div class="col-="md-8 col-md-offset-2 text-center fh5co-heading">
 						<span>Best Wishes</span>
 						<h2>Friends Wishes</h2>
 					</div>
@@ -346,7 +346,7 @@
 										</figure>
 										<span>Nicky <a href="#" class="Instagram">Instagram</a></span>
 										<blockquote>
-											<p>"Baarakallahu laka wa baarakaa alaika wa jamaa bainakumaa fii khoir ka eis dan suami, semoga jadi keluarga yg sakinah mawadah warohmah dan di karuniai anak yg sholeh dan sholehah"</p>
+											<p>"Baarakallahu laka wa baarakaa alaika wa jamaa bainakumaa fii khoir sepupuku dan suami, semoga jadi keluarga yg sakinah mawadah warohmah dan di karuniai anak yg sholeh dan sholehah"</p>
 										</blockquote>
 									</div>
 								</div>
@@ -391,7 +391,17 @@
 										</blockquote>
 									</div>
 								</div>
-
+								<div class="item">
+									<div class="testimony-slide active text-center">
+										<figure>
+											<img src="images/dina01.jpg" alt="user">
+										</figure>
+										<span>Dina <a href="#" class="Instagram">Instagram</a></span>
+										<blockquote>
+											<p>"Selamat menempuh hidup baru ka euis dan suami, semoga kalian senantiasa dilimpahi keberkahan, kebaikan, kebahagiaan dan cinta, selamat menikah, sister-love❤️"</p>
+										</blockquote>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
