--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="row animate-box">
-					<div class="col-="md-8 col-md-offset-2 text-center fh5co-heading">
+					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 						<span>Best Wishes</span>
 						<h2>Friends Wishes</h2>
 					</div>
