--- a/index.html
+++ b/index.html
@@ -498,8 +498,8 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; All Rights Reserved.</small> 
-						<small class="block">Powered by <a href="https://www.instagram.com/elnickopangestu" target="_blank">Elnicko Pangestu</a> with &#128151; Design By FREEHTML5</small>
+						<small class="block">&copy; All Rights Reserved FREEHTML5.</small> 
+						<small class="block">Powered by <a href="https://www.instagram.com/elnickopangestu" target="_blank">Elnicko Pangestu</a> with &#128151;</small>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
