--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html>
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Wedding &mdash; Mumu & Eis </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
+	<meta name="description" content="Wedding Invitation" />
+	<meta name="keywords" content="elnickopangestu" />
 	<meta name="author" content="FREEHTML5.CO" />
 
   	<meta property="og:title" content=""/>
@@ -161,8 +158,8 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; All Rights Reserved.</small> 
-						<small class="block">Powered by <a href="https://www.instagram.com/elnickopangestu" target="_blank">Elnicko Pangestu</a> with &#128151; Design By FREEHTML5</small>
+						<small class="block">&copy; All Rights Reserved FREEHTML5.</small> 
+						<small class="block">Powered by <a href="https://www.instagram.com/elnickopangestu" target="_blank">Elnicko Pangestu</a> with &#128151;</small>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
