--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">In A Relationship</h3>
-									<span class="date">January 1, 2016</span>
+									<span class="date">Mei, 2020</span>
 								</div>
 								<div class="timeline-body">
 									<p>Akhirnya komitmen lah butuh waktu -+2tahun untuk mempersiapkan segi materi karna tau biaya resepsi ga murah hehe alhamdulillah tanpa diduga2 rejeki dtg lbh cepat. 
