--- a/index.html
+++ b/index.html
@@ -399,6 +399,32 @@
 										</blockquote>
 									</div>
 								</div>
+								
+								<div class="item">
+									<div class="testimony-slide active text-center">
+										<figure>
+											<img src="images/putri.jpg" alt="user">
+										</figure>
+										<span>Putri <a href="#" class="Instagram">Instagram</a></span>
+										<blockquote>
+											<p>"Haii eis, selamat menjalankan ibadah terpanjang dalam hidup ya. Semoga kebahagiaan selalu menyertaimu. Semoga langkah baik kamu ini menjawab semua keresahan dan kegelisahan selama ini.
+                        Cinta memang bertuan ya, dia tau kemana dan kapan ia harus pulang.
+                        Dari rekan joget dangdutmu sewaktu muda dulu"</p>
+										</blockquote>
+									</div>
+                </div>
+                <div class="item">
+									<div class="testimony-slide active text-center">
+										<figure>
+											<img src="images/fahri.jpg" alt="user">
+										</figure>
+										<span>Fahri <a href="#" class="Instagram">Instagram</a></span>
+										<blockquote>
+											<p>"Barakallahula wabarokahalaika
+                        Teriring doa dan suka cita dari kami untuk mu dan suami membuka lembaran baru dalam hidup, senantiasa bahagia dalam menjalani biduk rumah tangga dengan kebahagiaan dan menerima segala kekurangan dan kelebihan satu sama lain."</p>
+										</blockquote>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
